mudança das fontes

--- a/main.css
+++ b/main.css
@@ -107,5 +107,12 @@
     align-items:center;
     justify-content:center;
   }
+
+  .text{
+    font-size: 20px;
+    font-family: "Sedan", serif;
+  }
+
+ 
   
   
